--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.166.0",
+    "gl-noise": "^1.6.1",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "three-custom-shader-material": "^5.4.0",
+    "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
